# bookMovies_backend

./: .env.template  .gitignore  README.md  pyproject.toml  ruff.toml
apps/booking/: admin.py  constants.py  filters.py  forms.py  models.py  serializers.py  tests.py  urls.py  views.py
apps/booking/migrations/: 0001_initial.py  0001_squashed_0002_initial.py  0002_initial.py  0003_rename_slot_id_booking_slot_and_more.py  0004_alter_seat_seat_number.py  0005_seat_slot.py  0006_alter_seat_slot.py  0007_seat_unique_seats_per_slot.py  0008_alter_seat_slot.py  0009_alter_booking_slot_alter_booking_user_and_more.py  0010_remove_seat_unique_seats_per_slot_remove_seat_slot.py  0011_alter_seat_seat_row.py
apps/cinema/: admin.py  apps.py  filters.py  models.py  serializers.py  tests.py  urls.py  views.py
apps/cinema/migrations/: 0001_initial.py  0002_rename_city_id_cinema_city.py  0003_alter_cinema_rows.py  0004_alter_cinema_city_delete_city.py  0005_alter_cinema_seats_per_row_and_more.py  0006_alter_cinema_city.py
apps/core/: admin.py  filters.py  managers.py  mixins.py  models.py  pagination.py  serializers.py  tests.py  urls.py  views.py  viewsets.py
apps/core/migrations/: 0001_initial.py  (+1 more)
apps/movie/: admin.py  apps.py  constants.py  filters.py  models.py  serializers.py  tests.py  urls.py  views.py
apps/slot/: admin.py  apps.py  constants.py  filters.py  models.py  serializers.py  tests.py  urls.py  views.py
apps/user/: admin.py  constants.py  managers.py  models.py  serializers.py  tests.py  urls.py  views.py
config/: middleware.py  settings.py  urls.py
(+15 files in other folders)
