[project]
name = "bookMovies"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "django>=6.0,<7.0",
    "pillow>=12.1.0",
    "psycopg[binary]>=3.3.2",
    "python-dotenv>=1.2.1",
]

[dependency-groups]
dev = [
    "django-debug-toolbar>=6.2.0",
    "pre-commit>=4.5.1",
    "ruff>=0.14.11",
]
